# modular-flow-engine

./: .gitignore  CLAUDE.md  COMPONENT_GUIDE.md  NOTES.md  PATTERNS.md  README.md  config.example.yaml  flow-engine  flow-engine.service  manifest.yaml  numbers.json  pyproject.toml  requirements.txt  runner.py  server.py  trait_api.yaml  trait_cli.yaml  trait_published.yaml  trait_systemd-service.yaml
components/: __init__.py
components/control/: __init__.py
components/sinks/: __init__.py  collector.py  csv_writer.py  detection_report.py  json_writer.py  report_writer.py
components/sources/: api_key.py  key_value.py  literal.py  text_list.py
components/transforms/: aggregator.py  category_consensus.py  category_parser.py  compare.py  console_print.py  item_progress.py  lookup.py  model_manager.py  openrouter.py  template.py  vote_aggregator.py  yesno_parser.py
composites/: council.json
config/: api_keys.json.example
core/: __init__.py  component.py  context.py  db_hook.py  engine.py  persistence.py  tracing.py  validation.py
flows/: aggregator_test.json  child_detector.json  composite_test.json  destination_test.json  dual_model_compare.json  error_test.json  input_test.json  question_evaluator.json  quick_test.json  simple_test.json  tag_debate.json  tag_debate_openrouter.json  tag_filter_classifier.json  tag_filter_debate.json  tag_filter_debate_small.json  test_console.json  test_default_dest.json  test_file_only.json  test_multi_sink.json  test_return_only.json
flows/examples/: 01_basic_loop.json  02_with_inputs.json  (+3 more)
server/: app.py  routes.py
(+61 files in other folders)
