[project]
name = "modular-flow-engine"
version = "1.0.0"
description = "Declarative dataflow engine for AI pipelines"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
flow-engine = "modular_flow_engine.runner:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
