[project]
name = "modular-flow-engine"
version = "1.0.0"
description = "Declarative dataflow engine for AI pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Ckrest"}]
dependencies = [
    "httpx>=0.24",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
    "platformdirs>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
flow-engine = "modular_flow_engine.runner:main"

[project.urls]
Repository = "https://github.com/Ckrest/modular-flow-engine"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
